St: Restyle another branch

--- a/Pages/slim.html
+++ b/Pages/slim.html
@@ -14,51 +14,78 @@
     <section class="content">
         <div class="overlay">
             <div class="nav">
-    <div class="container-fluid">
-        <div class="row justify-content-between mt-1">
-            <div class="col-lg-2 d-flex gap-2">
-              <div class="logo d-flex">
-                <p class="turn fs-1 fw-bold">B</p>
-                <p class="unturn fs-1 fw-bold"><span class="red">B</span></p>
+              <div class="container-fluid">
+                <div class="row justify-content-between mt-1">
+                    <div class="col-lg-2 d-flex gap-2">
+                      <div class="logo d-flex">
+                        <p class="turn fs-1 fw-bold">B</p>
+                        <p class="unturn fs-1 fw-bold"><span class="red">B</span></p>
+                      </div>
+                      <h1 class="fs-2 mt-2">Black<span class="red">Burn</span></h1>
+                    </div>
+                    <div class="col-lg-5 list">
+                      <ul class="d-flex mt-3 fw-bold w-100 justify-content-around">
+                        <li><a href="weight.html">Home</a></li>
+                        <!-- <li><a href="#">About</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Contact</a></li> -->
+                        <li><a href="../index.html"><span class="log">Log out</span></a></li>
+                      </ul>
+                    </div>
+                </div>
               </div>
-              <h1 class="fs-2 mt-2">Black<span class="red">Burn</span></h1>
-            </div>
-            <div class="col-lg-5 list">
-              <ul class="d-flex mt-3 fw-bold w-100 justify-content-around">
-                <li><a href="weight.html">Home</a></li>
-                <!-- <li><a href="#">About</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact</a></li> -->
-                <li><a href="../index.html"><span class="log">Log out</span></a></li>
-              </ul>
             </div>
           </div>
+    </section>
+    <section>
+      <div class="container-fluid">
+        <div class="row justify-content-around">
+          <div class="col-lg-6">
+            <img src="../Assets/Pic1.jpeg" class="pic1 w-100">
+          </div>
+          <div class="col-lg-4 d-flex flex-column justify-content-center">
+            <p class="slim">Weight lose is <span class="hard1">Hard</span> work<br>
+              Not magic<br> And we are prepared to make you work</p>
           </div>
         </div>
-          <img src="../Assets/Pic1.jpeg" class="pic1">
-
-<p class="slim">Weight lose is <span class="hard1">Hard</span> work<br>
-Not magic<br> And we are prepared to make you work</p>
-
-
-<div class="header">
-<p>How to Lose Weight <spam class="fast">Fast</spam> in 3 Simple Steps</p>
-</div>
-<div class="video">
-    <video autoplay loop muted width="1000" height="800">
-        <source src="../Assets/video.ogg" type="video/ogg">
-      </video>0
-      <h4> 1. Battle ropes</h4>
-      <p class="step">Battle ropes are a great way to burn calories.<br> They can burn upto 421 calories every hour.<br> They may look intimidating but they are an easy<br> and fun exercise to incorporate into your workout.</p>
-</div>
-<img src="../Assets/carbs.jpg" class="carb">
-<div class="back">
-<h2>2. Cut back on refined carbs</h2>
-<p class="cut">One way to lose weight quickly is to cut back on sugars and starches, or <br> carbohydrates. This could be with a low carb eating plan or by reducing <br> refined carbs and replacing them with whole grains.When you do that, your hunger levels go down, and you generally end up eating fewer calories</p>
-</div>
-<h3>3: Attempt a 14 Day <span class="fit">Fitness</span> Challenge</h3>
+      </div>
+    </section>
+    <section>
+      <div class="container-fluid">
+        <div class="header">
+          <p class="text-center">How to Lose Weight <span class="fast">Fast</span> in 3 Simple Steps</p>
+          </div>
+        <div class="row justify-content-around">
+          <div class="col-lg-5">
+              <video autoplay loop muted width="100%" height="100%">
+                  <source src="../Assets/video.ogg" type="video/ogg">
+                </video>
+          </div>
+          <div class="col-lg-5">
+            <h4 class="fs-3 w-100"> 1. Battle ropes</h4>
+            <p class="step">Battle ropes are a great way to burn calories.<br> They can burn upto 421 calories every hour.<br> They may look intimidating but they are an easy<br> and fun exercise to incorporate into your workout.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="container-fluid mt-5">
+        <div class="row justify-content-around">
+          <div class="col-lg-5">
+            <h2>2. Cut back on refined carbs</h2>
+            <p class="cut">One way to lose weight quickly is to cut back on sugars and starches, or <br> carbohydrates. This could be with a low carb eating plan or by reducing <br> refined carbs and replacing them with whole grains.When you do that, your hunger levels go down, and you generally end up eating fewer calories</p>
+          </div>
+          <div class="col-lg-5">
+            <img src="../Assets/carbs.jpg" class="carb w-100">
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="container-fluid">
+        <h3>3: Attempt a 14 Day <span class="fit">Fitness</span> Challenge</h3>
 <div class="rec">
-    <div class="dropdown">
+    <div class="dropdown d-flex flex-column align-items-center">
         <p class="list">Once you click on a day a list will appear of exercises to perform. For maximum results follow this plan and eat at a calorie deficit.  </p>
             <button class="accordion" style="padding-top: 2%;">DAY1</button>
         <div id="myDropdown">
@@ -197,7 +224,9 @@ Not magic<br> And we are prepared to make you work</p>
         </div>
       </div>
 </div>
-<div class="summary">
+      </div>
+    </section>
+<div class="summary mt-5">
 <h5>TIP</h5>
 <P>Assemble each meal out of a protenin source, healthy fat<br> source, complex carb, and vegetables.<br> <br> Leafy green vegetables are a great way to bulk up a meal with <br>low calories and lots of nutrients, leaving you more full and satiated</P>
 </div>
@@ -214,24 +243,26 @@ Not magic<br> And we are prepared to make you work</p>
 
 
 
-<section class="footer">
-    <footer class="amaze">
-      <div class="row justify-content-between">
-        <div class="col-lg-3 w-40 d-flex justify-content-around">
-          <a href="#"><ion-icon class="fs-3 text-light" name="logo-facebook"></ion-icon></a>
-          <a href="#"><ion-icon class="fs-3 text-light" name="logo-twitter"></ion-icon></a>
-          <a href="#"><ion-icon class="fs-3 text-light" name="logo-instagram"></ion-icon></a>
-          <a href="#"><ion-icon class="fs-3 text-light" name="mail-outline"></ion-icon></a>
-          <a href="#"><ion-icon class="fs-3 text-light" name="call-outline"></ion-icon></a>        
+<section class="footer mt-5">
+    <div class="container-fluid">
+      <footer class="amaze">
+        <div class="row justify-content-between">
+          <div class="col-lg-3 w-40 d-flex justify-content-around">
+            <a href="#"><ion-icon class="fs-3 text-light" name="logo-facebook"></ion-icon></a>
+            <a href="#"><ion-icon class="fs-3 text-light" name="logo-twitter"></ion-icon></a>
+            <a href="#"><ion-icon class="fs-3 text-light" name="logo-instagram"></ion-icon></a>
+            <a href="#"><ion-icon class="fs-3 text-light" name="mail-outline"></ion-icon></a>
+            <a href="#"><ion-icon class="fs-3 text-light" name="call-outline"></ion-icon></a>        
+          </div>
+          <div class="col-lg-4 mt-2 text-end mx-3">
+            <p>© 2022 Blackburn. Terms and conditions.</p>
+          </div>
         </div>
-        <div class="col-lg-4 mt-2">
-          <p>© 2022 Blackburn. Terms and conditions.</p>
+        <div class="end text-center">
+          <p>Website by Nacturnals</p>
         </div>
-      </div>
-      <div class="end text-center">
-        <p>Website by Nacturnals</p>
-      </div>
-    </footer>
+      </footer>
+    </div>
   </section>
 
 
@@ -239,8 +270,8 @@ Not magic<br> And we are prepared to make you work</p>
 
 
 
-   </div>
- </section>
+   
+ 
    <script src="../JS/slim.js"></script>
 </body>
 </html>
